--- a/VRChat/69/1239069.html
+++ b/VRChat/69/1239069.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "I2LYS4ffHPQfS919dDgZEoFWI/VfQDH/D48QD/6QDGk="></script>
+    "rBskIoLLbMFhWiLhHWFXjyLXOlyHl3Esjt3NyhtVYdA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"No3_StrengthYellow","description":"　No3_StrengthYellow\n\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n ver.1.01\n\n1オブジェクト　\n3マテリアル　\nポリゴン数 29510\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n重要禁止事項の例\n・本モデルの再配布、再販売\n・アバターペデステルでの利用\n・publicアバターとしてのアバターアップロード\n・自作発言\n・政治・宗教的利用\n\n　許可事項の例\n・モデルデータの改変\n・商用利用\n\n\n※事前の連絡なく変更、修正、事項の追加を行うことがあります。\n\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n\n■内容■\n\n・readme.txt\n\n・No3_StrengthYellow ver.1.01.unitypackage\n\nunitypackage内\n・.png（テクスチャファイル等）\n・.fbx（本モデル）\n・.material\n\n◇設定されているもの\nscene内のモデル\n\n\n■更新情報■\n\nver.1.01 2019/02/22：new\n\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n■利用規約■\n\n\n1、VRChat\u0026UnityModelのデータを、抽出できる形での転載・再配布・販売は禁止\n\n2、一部パーツやメッシュを他製作者のモデルに流用したり、映像やゲームなどの制作物という形を介さずに本モデルやテクスチャそのものを販売することを禁止\n\n3、映像媒体、ゲーム作品等の露出は可能です。\n\n4、人に迷惑をかけるような使用方法は禁止\n\n5、本モデルデータを利用された事によって生じるいかなる損害に対して当方は一切責任を負いません。自己責任・ご判断でご利用下さい。\n\n6、本モデルデータの利用者はモデルデータの利用をもって本利用規約に同意したものとみなします。\n\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n\n","url":"https://booth.pm/ja/items/1239069","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/9a77de9c-4e1b-4d58-adeb-bfa736ae6d07/i/1239069/da7f4d29-480f-4de9-a380-a46e7afca087_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I2LYS4ffHPQfS919dDgZEoFWI/VfQDH/D48QD/6QDGk="></script>
+    nonce="rBskIoLLbMFhWiLhHWFXjyLXOlyHl3Esjt3NyhtVYdA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -181,7 +181,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      146
+                                      147
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -197,7 +197,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      146
+                                      147
                                     </div>
                                   </div></a>
                                 </div>
@@ -612,7 +612,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
